2004-11-24  Ilja Booij  <ilja@ic-s.nl>

	* pop3.c (pop3): changed AUTH response to return a '.' after
	the list of authentication mechanisms. fixed bug #111

2004-11-23  Aaron Stone  <aaron@serendipity.cx>

	* main.c: added a check to see if there are any deliveries
	to be made before bothering to store a message not being
	delivered to anybody.

2004-11-22  Aaron Stone  <aaron@serendipity.cx>

	* sort/sortsieve.c: latest libSieve API.
	* sievecmd.c: up to date with sortsieve.c.
	* timsieved.c: couple of changes.

2004-11-22  Paul Stevens <paul@nfg.nl>

	* imaputils.h: added mime_unwrap
	* imaputils.c: use mime_unwrap in show_body_structure_list to unwrap
	mime fieldvalues containing newlines.

2004-11-22  Ilja Booij  <ilja@Ilja-Booijs-Computer.local>

	* pipe.c (send_reply): Reverted back from "Delivered-To" to 
	"Deliver-To".

	* main.c (do_showhelp): Reverted back from "Delivered-To" to 
	"Deliver-To". 
	(main): Reverted back from "Delivered-To" to 
	"Deliver-To".

	* header.c: Reverted back from "Delivered-To" to 
	"Deliver-To".

2004-11-15  Aaron Stone  <aaron@serendipity.cx>

	* db.c, db.h: added count-only counterparts db_count_iplog
	and db_deleted_count.
	* maintenance.c: basically a rewrite. -n, -y flags are respected,
	-a flag is added. messages are cleaner, -v more useful.

2004-11-15  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, imapcommands.c: fixed the segfaults caused by
	double frees.
	
2004-11-10  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, dbmail-imapsession.c, dbmail-imapsession.h: changed 
	db_get_msginfo_range to dbmail_imap_session_get_msginfo_range and
	moved it to dbmail-imapsession.c
	* imapcommands.c: minor cleanup in _ic_fetch.
	
2004-11-04  Paul Stevens <paul@nfg.nl>
	
	* dbmail-imapsession.c: fixed broken fetch command.

2004-11-01  Aaron Stone  <aaron@serendipity.cx>

	* INSTALL: couple of minor edits, per Sean Kelly.
	* maintenance.c: changed references to "-f... fix" to "-r... repair"
